--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -6,7 +6,49 @@
 }
 
 body{
-  background-image: url(/img/node.png);
-  background-size: cover;
+ /* background-image: url(/img/node.png);
+  background-size: cover;*/
 }
 
+h2{
+font-size: 30px;
+}
+
+h1{
+font-size: 50px;
+}
+.box{
+display: inline-block;
+border: 1px solid #111111;
+margin: 10px;
+width: 50px;
+height: 50px;
+border-radius: 10px;
+}
+
+.color{
+display: inline-block;
+border: 1px solid #111111;
+margin: 10px;
+width: 50px;
+height: 50px;
+border-radius: 10px;
+}
+
+#selected{
+display: inline-block;
+width: 50px;
+height: 50px;
+border: 1px solid #111111;
+margin: 10px;
+border-radius: 10px;
+}
+.pixel{
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+}
+#canvas{
+border: 1px solid;
+font-size: 0;
+}
