--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -2,20 +2,23 @@ doctype html
 html
   head
     meta(charset='utf-8')
-    title Node/Express.js Template
+    title Games-Browser
     link(rel='stylesheet', href='/css/style.css')
   body
-    h1 Node/Express.js Template
+    h1 Browser Games
     nav
       ul
         li: a(href='/') Home
+        li: a(href='/colors') Colors
+        li: a(href='/packman') Packman
+        li: a(href='/painter') Painter
 
     block content
 
     script(src='/js/vendor/jquery-2.1.1.min.js')
     script(src='/js/vendor/lodash.min.js')
     script(src='/js/vendor/moment.min.js')
-    script(src='/js/user/main.js')
+    script(src='/js/user/home.js')
 
     block scripts
 
